--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,13 @@
 *.tar.gz
 *.rar
 
+
 .gradle
 .idea
-/java/*
 .gradle
 /local.properties
 .DS_Store
 /build
+app/release/*.apk
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
